--- a/Bootcamp/pom.xml
+++ b/Bootcamp/pom.xml
@@ -45,11 +45,10 @@
 		</dependency>
 		
 		<dependency>
-   <groupId>org.postgresql</groupId>
-   <artifactId>postgresql</artifactId>
-   <version>9.4-1206-jdbc42</version>
-   
-</dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
